src/objects/Customer_Story__c.object
<CustomObject>
    <description>Owner - Roopal Shah</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Customer_Info_ID__r.Account__r.Id</formula>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Customer_Info_ID__r.Account_Name__c</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Web_Site__c</fullName>
        <formula>Customer_Info_ID__r.Company_Web_Site__c</formula>
        <label>Company Web Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Allows_Ext_Use__c</fullName>
        <formula>text(Customer_Info_ID__r.Able_to_Mention_Customer_Name__c)</formula>
        <label>Contract Allows External Use?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Australia&quot;), &quot;Australia; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Brazil&quot;), &quot;Brazil; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Canada&quot;), &quot;Canada; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Finland&quot;), &quot;Finland; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;France&quot;), &quot;France; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Germany&quot;), &quot;Germany; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Italy&quot;), &quot;Italy; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Japan&quot;), &quot;Japan; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Mexico&quot;), &quot;Mexico; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;New Zealand&quot;), &quot;New Zealand; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Peru&quot;), &quot;Peru; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Poland&quot;), &quot;Poland; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;Russia&quot;), &quot;Russia; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;South Africa&quot;), &quot;South Africa; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;US&quot;), &quot;US; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;UK&quot;), &quot;UK; &quot;, null) &amp;
IF(INCLUDES( Customer_Info_ID__r.Country__c ,&quot;US / Puerto Rico&quot;), &quot;US / Puerto Rico; &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Info_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link to customer Info from which the Account is drawn - must be populated in order to query Story properly in Story Search</description>
        <label>Customer Info ID</label>
        <referenceTo>Customer_Information__c</referenceTo>
        <relationshipLabel>Customer Stories</relationshipLabel>
        <relationshipName>Customer_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Information - Do not use</label>
        <referenceTo>Customer_Information__c</referenceTo>
        <relationshipLabel>Customer Stories</relationshipLabel>
        <relationshipName>Customer_Stories1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>contains</operation>
                <value>Customer-Direct, Customer-Indirect</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Stories</relationshipLabel>
        <relationshipName>Customer_Stories_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Story_Key__c</fullName>
        <externalId>true</externalId>
        <label>Customer Story Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWP_in_Millions__c</fullName>
        <formula>Customer_Info_ID__r.DWP_in_Millions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For currency fields, please do not input any special characters, including commas or $ signs, e.g. $1,000.</inlineHelpText>
        <label>DWP (in Millions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Story_Captured__c</fullName>
        <label>Year Story Captured</label>
        <picklist>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-2005</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products Involved</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards-based Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Model Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Scoring Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quantifiable_Metric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quantifiable Metric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotes__c</fullName>
        <label>Quotes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(INCLUDES(  Customer_Info_ID__r.Region__c ,&quot;NAM&quot;), &quot;NAM; &quot;, null) &amp;
IF(INCLUDES(  Customer_Info_ID__r.Region__c ,&quot;LatAm&quot;), &quot;LatAm; &quot;, null) &amp;
IF(INCLUDES(  Customer_Info_ID__r.Region__c ,&quot;EMEA&quot;), &quot;EMEA; &quot;, null) &amp;
IF(INCLUDES(  Customer_Info_ID__r.Region__c ,&quot;APAC&quot;), &quot;APAC; &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Stories</relationshipLabel>
        <relationshipName>Customer_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Story?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_VC_Story__c</fullName>
        <label>Services/VC Story?</label>
        <picklist>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sharing_Restrictions__c</fullName>
        <label>Sharing Restrictions</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Approved for External Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group Sales Presentations (Under NDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Approval - See Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Accounts__c</fullName>
        <description>maintained through trigger on Customer Story Account object</description>
        <inlineHelpText>list of accounts that are associated with this story; add new accounts by linking them at the bottom of the Story page.</inlineHelpText>
        <label>Story Accounts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story_Date__c</fullName>
        <label>Story Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Story_Source__c</fullName>
        <label>Story Source</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Summary__c</fullName>
        <label>Story Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story_Title__c</fullName>
        <label>Story Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <picklist>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function/Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Live Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Award Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Email/Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Slide Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Case</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>story_url__c</fullName>
        <label>Story URL</label>
        <type>Url</type>
    </fields>
    <label>Customer Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Story_Title__c</columns>
        <columns>Story_Accounts__c</columns>
        <columns>Story_Source__c</columns>
        <columns>Products__c</columns>
        <columns>NAME</columns>
        <columns>Story_Type__c</columns>
        <columns>Date_Story_Captured__c</columns>
        <columns>Story_Date__c</columns>
        <columns>story_url__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Chinese</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Products__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Date_Story_Captured__c</columns>
        <columns>Story_Date__c</columns>
        <columns>story_url__c</columns>
        <columns>Story_Source__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Chinese</value>
        </filters>
        <label>All - Chinese</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_French</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Products__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Date_Story_Captured__c</columns>
        <columns>Story_Date__c</columns>
        <columns>story_url__c</columns>
        <columns>Story_Source__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>French</value>
        </filters>
        <label>All - French</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_German</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Products__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Date_Story_Captured__c</columns>
        <columns>Story_Date__c</columns>
        <columns>story_url__c</columns>
        <columns>Story_Source__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>German</value>
        </filters>
        <label>All - German</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Japanese</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Products__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Date_Story_Captured__c</columns>
        <columns>Story_Date__c</columns>
        <columns>story_url__c</columns>
        <columns>Story_Source__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <label>All - Japanese</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Spanish</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Products__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Date_Story_Captured__c</columns>
        <columns>Story_Date__c</columns>
        <columns>story_url__c</columns>
        <columns>Story_Source__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>Spanish</value>
        </filters>
        <label>All - Spanish</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BC_Stories</fullName>
        <columns>NAME</columns>
        <columns>Story_Accounts__c</columns>
        <columns>Products__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Story__c</columns>
        <columns>Quotes__c</columns>
        <columns>Story_Date__c</columns>
        <columns>Story_Source__c</columns>
        <columns>story_url__c</columns>
        <columns>Has_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products__c</field>
            <operation>includes</operation>
            <value>BillingCenter</value>
        </filters>
        <label>BC Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CC_Stories</fullName>
        <columns>NAME</columns>
        <columns>Story_Accounts__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Story__c</columns>
        <columns>Products__c</columns>
        <columns>Quotes__c</columns>
        <columns>Story_Date__c</columns>
        <columns>Story_Source__c</columns>
        <columns>story_url__c</columns>
        <columns>Has_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products__c</field>
            <operation>includes</operation>
            <value>ClaimCenter</value>
        </filters>
        <label>CC Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PC_Stories</fullName>
        <columns>NAME</columns>
        <columns>Story_Accounts__c</columns>
        <columns>Story_Type__c</columns>
        <columns>Story_Title__c</columns>
        <columns>Story__c</columns>
        <columns>Products__c</columns>
        <columns>Quotes__c</columns>
        <columns>Story_Date__c</columns>
        <columns>Story_Source__c</columns>
        <columns>story_url__c</columns>
        <columns>Has_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products__c</field>
            <operation>includes</operation>
            <value>PolicyCenter</value>
        </filters>
        <label>PC Stories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Story Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>